Lint sbr & add a mechanism to not go over the network for bazel when I don't want to instead of commenting out bazel

--- a/apps/sbr/BUILD
+++ b/apps/sbr/BUILD
@@ -1,10 +1,10 @@
 load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
-load("@pigweed//targets/rp2040:flash.bzl", "flash_rp2040")
+
 # XXX: Gotta support rp2040 more fully / separate out system, etc.
 # load("//targets/rp2:binary.bzl", "rp2040_binary", "rp2350_binary")
 load("//examples/pigweed/tools:tools.bzl", "host_console")
 
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//visibility:private"])
 
 cc_binary(
     name = "sbr",
@@ -47,18 +47,18 @@ host_console(
 #     name = "rp2040_sbr.elf",
 #     binary = ":sbr",
 # )
-# 
+#
 # # Create an rp2350 flashable ELF
 # rp2350_binary(
 #     name = "rp2350_sbr.elf",
 #     binary = ":sbr",
 # )
-# 
+#
 # flash_rp2040(
 #     name = "flash_rp2040",
 #     rp2040_binary = "rp2040_sbr.elf",
 # )
-# 
+#
 # # Note: Despite the name, the rule works for the 2350.
 # flash_rp2040(
 #     name = "flash_rp2350",
