Kinda get ready to compile for rp2

--- a/apps/sbr/BUILD
+++ b/apps/sbr/BUILD
@@ -1,7 +1,8 @@
 load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
+load("@pigweed//targets/rp2040:flash.bzl", "flash_rp2040")
 
 # XXX: Gotta support rp2040 more fully / separate out system, etc.
-# load("//targets/rp2:binary.bzl", "rp2040_binary", "rp2350_binary")
+load("//platforms/rp2:binary.bzl", "rp2040_binary")  # , "rp2350_binary")
 load("//examples/pigweed/tools:tools.bzl", "host_console")
 
 package(default_visibility = ["//visibility:private"])
@@ -42,24 +43,26 @@ host_console(
     extra_args = ["--browser"],
 )
 
-# XXX
-# # Create an rp2040 flashable ELF
+# Create an rp2040 flashable ELF
+# XXX: .emb isn't compiling ok for rp2040
 # rp2040_binary(
 #     name = "rp2040_sbr.elf",
 #     binary = ":sbr",
 # )
-#
+# 
+# flash_rp2040(
+#     name = "flash_rp2040",
+#     rp2040_binary = "rp2040_sbr.elf",
+# )
+
+
+# XXX
 # # Create an rp2350 flashable ELF
 # rp2350_binary(
 #     name = "rp2350_sbr.elf",
 #     binary = ":sbr",
 # )
-#
-# flash_rp2040(
-#     name = "flash_rp2040",
-#     rp2040_binary = "rp2040_sbr.elf",
-# )
-#
+
 # # Note: Despite the name, the rule works for the 2350.
 # flash_rp2040(
 #     name = "flash_rp2350",
