--- a/apps/sbr/system/BUILD
+++ b/apps/sbr/system/BUILD
@@ -45,3 +45,33 @@ cc_library(
     target_compatible_with = incompatible_with_mcu(),
     deps = ["//apps/sbr/system:headers"],
 )
+
+cc_library(
+    name = "rp2_system",
+    srcs = [
+        "rp2_system.cc",
+    ],
+    implementation_deps = [
+        "@pigweed//pw_i2c:address",
+        "@pigweed//pw_i2c:register_device",
+        "//platforms/host:initiator_host",
+        "@pigweed//pw_channel",
+        "@pigweed//pw_digital_io",
+        "@pigweed//pw_digital_io:digital_io_mock",
+        "@pigweed//pw_system:io",
+
+        "@pico-sdk//src/rp2_common/cmsis:cmsis_core",
+        "@pico-sdk//src/rp2_common/hardware_adc",
+        "@pico-sdk//src/rp2_common/hardware_exception:hardware_exception",
+        "@pico-sdk//src/rp2_common/pico_stdlib:pico_stdlib",
+
+        "@pigweed//pw_channel:rp2_stdio_channel",
+        "@pigweed//pw_cpu_exception:entry_backend_impl",
+        "@pigweed//pw_digital_io_rp2040",
+        "@pigweed//pw_i2c_rp2040",
+        "@pigweed//pw_multibuf:simple_allocator",
+        "@pigweed//pw_system:async",
+        "@pigweed//third_party/freertos:support",
+    ],
+    deps = ["//apps/sbr/system:headers"],
+)
