--- a/apps/sbr/BUILD
+++ b/apps/sbr/BUILD
@@ -11,7 +11,7 @@ cc_binary(
     srcs = ["main.cc"],
     deps = [
         "//apps/sbr/system",
-        "//hw_service/sbr:service",
+        "//hw_services/sbr:service",
         "@pigweed//pw_log",
         "@pigweed//pw_system:async",
 
