--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,6 +15,11 @@ jobs:
       - uses: ./.github/actions/bazel-setup
         with:
           buildbuddy_api_key: ${{ secrets.BUILDBUDDY_API_KEY }}
+      - name: Install Lint Pre-requisites
+        run: |
+          # Needed for clang-format / llvm_toolchain, otherwise libtinfo.so.5
+          # is not found
+          sudo apt-get install -y libncurses5
       - name: Lint
         run: |
           ./lint.sh --mode check
