Setup pigweed platforms

--- a/examples/pigweed/apps/blinky/BUILD
+++ b/examples/pigweed/apps/blinky/BUILD
@@ -1,14 +1,14 @@
 load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
-load("//examples/pigweed/tools:tools.bzl", "host_console")
+load("//third_party/pigweed/tools:tools.bzl", "host_console")
 
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//visibility:private"])
 
 cc_binary(
     name = "blinky",
     srcs = ["main.cc"],
     deps = [
         "//examples/pigweed/modules/blinky:service",
-        "//examples/pigweed/system",
+        "//examples/pigweed/apps/blinky/system",
         "@pigweed//pw_log",
         "@pigweed//pw_system:async",
 
