--- a/examples/pigweed/modules/timer_future/BUILD
+++ b/examples/pigweed/modules/timer_future/BUILD
@@ -12,7 +12,7 @@
 # License for the specific language governing permissions and limitations under
 # the License.
 
-package(default_visibility = ["//visibility:private"])
+package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "timer_future",
