--- a/apps/sbr/system/BUILD
+++ b/apps/sbr/system/BUILD
@@ -27,13 +27,8 @@ cc_library(
         "host_system.cc",
     ],
     implementation_deps = [
-        "@pigweed//pw_channel",
-        "@pigweed//pw_channel:stream_channel",
-        "@pigweed//pw_digital_io",
-        "@pigweed//pw_digital_io:digital_io_mock",
-        "@pigweed//pw_multibuf:simple_allocator",
+        "//third_party/pigweed/system:common_host_system",
         "@pigweed//pw_system:async",
-        "@pigweed//pw_system:io",
     ],
     target_compatible_with = incompatible_with_mcu(),
     deps = ["//apps/sbr/system:headers"],
@@ -44,21 +39,8 @@ cc_library(
     srcs = [
         "rp2_system.cc",
     ],
-    implementation_deps = [
-        "@pico-sdk//src/rp2_common/cmsis:cmsis_core",
-        "@pico-sdk//src/rp2_common/hardware_adc",
-        "@pico-sdk//src/rp2_common/hardware_exception:hardware_exception",
-        "@pico-sdk//src/rp2_common/pico_stdlib:pico_stdlib",
-        "@pigweed//pw_channel",
-        "@pigweed//pw_channel:rp2_stdio_channel",
-        "@pigweed//pw_cpu_exception:entry_backend_impl",
-        "@pigweed//pw_digital_io",
-        "@pigweed//pw_digital_io:digital_io_mock",
-        "@pigweed//pw_digital_io_rp2040",
-        "@pigweed//pw_multibuf:simple_allocator",
-        "@pigweed//pw_system:async",
-        "@pigweed//pw_system:io",
-        "@pigweed//third_party/freertos:support",
+    deps = [
+        "//apps/sbr/system:headers",
+        "//third_party/pigweed/system:common_rp2_system",
     ],
-    deps = ["//apps/sbr/system:headers"],
 )
