Wire up the sbr service into the app (#155)
This is the culmination of several PRs, allowing us to bind this service
to this app.

See
https://github.com/michael-christen/toolbox/pull/155#issuecomment-2469840873
for my log of notes along the way.

Here are the related PRs:
- #153 
- #152 
- #151 
- #150 
- #143 
- #142 
- #141 
- #140 
- #138 

And the created/related issues:
- #154 
- #149 
- #148
- #147 
- #145 
- #144 
- #139 
- #125

--- a/apps/sbr/BUILD
+++ b/apps/sbr/BUILD
@@ -10,6 +10,7 @@ cc_binary(
     srcs = ["main.cc"],
     deps = [
         "//apps/sbr/system",
+        "//hw_services/sbr:service",
         "@pigweed//pw_log",
         "@pigweed//pw_system:async",
 
