--- a/tools/ipython/BUILD
+++ b/tools/ipython/BUILD
@@ -1,3 +1,4 @@
+load("@pip//:requirements.bzl", "all_requirements")
 load("//bzl:py.bzl", "py_binary")
 
 package(default_visibility = ["//visibility:private"])
@@ -6,5 +7,7 @@ py_binary(
     name = "ipython",
     srcs = ["ipython.py"],
     visibility = ["//:__subpackages__"],
-    deps = ["@pip//ipdb"],
+    deps = [
+        "@pip//ipdb",
+    ] + all_requirements,
 )
