Got something kinda working

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-# Nothing now, but could filterwarnings, etc.
+filterwarnings =
+    error
 
 # No conftest.py needed as bazel is doing most of the heavy lifting for us
