Show proto getting imported and analyzed

--- a/utils/BUILD
+++ b/utils/BUILD
@@ -1,4 +1,4 @@
-load("//bzl:py.bzl", "py_library", "py_test")
+load("//bzl:py.bzl", "py_binary", "py_library", "py_test")
 
 package(default_visibility = ["//visibility:private"])
 
@@ -15,5 +15,26 @@ py_test(
     deps = [
         ":graph_algorithms",
         "@pip//networkx",
+    ],
+)
+
+py_binary(
+    name = "bep_reader",
+    srcs = ["bep_reader.py"],
+    visibility = ["//:__subpackages__"],
+    deps = [
+        ":proto",
+        "//third_party/bazel/proto:build_event_stream_py_library",
+        "@pip//tabulate",
+    ],
+)
+
+py_library(
+    name = "proto",
+    srcs = ["proto.py"],
+    visibility = ["//:__subpackages__"],
+    deps = [
+        "@com_google_protobuf//:protobuf_python",
+        "@pip//protobuf",
     ],
 )
