--- a/requirements.in
+++ b/requirements.in
@@ -22,6 +22,9 @@ matplotlib
 #   ├─▶ rules_python~~pip~pip_311_pyqt6/site-packages/PyQt6/__init__.py
 #   ╰─▶ site-packages/PyQt6/__init__.py
 
+# InquirerPy
+tabulate
+
 # largely for development
 pytest
 black[jupyter]
