--- a/requirements.in
+++ b/requirements.in
@@ -9,6 +9,9 @@ grpcio
 mypy
 protobuf
 types-protobuf
+# Analyze graphs easily
+# https://networkx.org/documentation/stable/index.html
+networkx[default]
 # Make nice-looking table output
 tabulate
 
