--- a/.github/actions/bazel-setup/action.yml
+++ b/.github/actions/bazel-setup/action.yml
@@ -27,4 +27,5 @@ runs:
       run: |
         cat <<EOF > user.bazelrc
         build --remote_header=x-buildbuddy-api-key="$BUILDBUDDY_API_KEY"
+        import %workspace%/.aspect/bazelrc/ci.bazelrc
         EOF
