--- a/examples/bazel/BUILD
+++ b/examples/bazel/BUILD
@@ -6,7 +6,7 @@ package(default_visibility = ["//visibility:private"])
 
 filegroup(
     name = "python_source",
-    srcs = glob(["*.py"]) + [
+    srcs = glob(["*.py"], allow_empty=True) + [
     ],
     visibility = ["//visibility:public"],
 )
