--- a/examples/pigweed/modules/blinky/BUILD
+++ b/examples/pigweed/modules/blinky/BUILD
@@ -26,7 +26,10 @@ package(default_visibility = ["//visibility:public"])
 
 filegroup(
     name = "python_source",
-    srcs = glob(["*.py"]) + [
+    srcs = glob(
+        ["*.py"],
+        allow_empty = True,
+    ) + [
     ],
     visibility = ["//visibility:public"],
 )
