--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,39 @@
+# Import Apsect bazelrc presets
+# From https://docs.aspect.build/guides/bazelrc/
+# & https://github.com/bazel-contrib/bazel-lib/tree/5853e2e441df850dc332910a0808e9dee2ed9e27/.aspect/bazelrc
+import %workspace%/.aspect/bazelrc/bazel7.bazelrc
+import %workspace%/.aspect/bazelrc/convenience.bazelrc
+import %workspace%/.aspect/bazelrc/correctness.bazelrc
+import %workspace%/.aspect/bazelrc/debug.bazelrc
+import %workspace%/.aspect/bazelrc/java.bazelrc
+import %workspace%/.aspect/bazelrc/javascript.bazelrc
+import %workspace%/.aspect/bazelrc/performance.bazelrc
+#
+# NOTE for:
+# build --incompatible_default_to_explicit_init_py
+#
+# This also prevents spurious package name collisions at import time, and
+# should be the default (https://github.com/bazelbuild/bazel/issues/7386). It's
+# particularly helpful for Pigweed, because we have many potential package name
+# collisions due to a profusion of stuttering paths like
+# pw_transfer/py/pw_transfer.
+#
+# NOTE for:
+# build --incompatible_strict_action_env
+#
+# Don't inherit system PATH. Improves hermeticity and cache hit rates. Should
+# be true by default one day (https://github.com/bazelbuild/bazel/issues/7026).
+
+# My overrides of the above imports
+# TODO(#172): Update these
+#
+# pw_protobuf/BUILD.bazel, llvm_toolchain
+common --noincompatible_disallow_empty_glob
+# loud / I don't want to set `timeout=short` on all tests
+test --notest_verbose_timeout_warnings
+# No module named 'pw_protobuf_codegen_protos' in pw_protobuf options
+build --legacy_external_runfiles
+
 # See https://bazel.build/docs/user-manual for option definitions
 #
 # Standard Pigweed flags
@@ -19,19 +55,6 @@ build --incompatible_enable_cc_toolchain_resolution
 # cache invalidated when your host C++ config changes.
 common --experimental_exclude_defines_from_exec_config
 common --experimental_exclude_starlark_flags_from_exec_config
-
-# Don't automatically create __init__.py files.
-#
-# This prevents spurious package name collisions at import time, and should be
-# the default (https://github.com/bazelbuild/bazel/issues/7386). It's
-# particularly helpful for Pigweed, because we have many potential package name
-# collisions due to a profusion of stuttering paths like
-# pw_transfer/py/pw_transfer.
-common --incompatible_default_to_explicit_init_py
-
-# Don't inherit system PATH. Improves hermeticity and cache hit rates. Should
-# be true by default one day (https://github.com/bazelbuild/bazel/issues/7026).
-common --incompatible_strict_action_env
 
 # Expose exec toolchains for Python. We use these toolchains in some rule
 # implementations (git grep for
@@ -59,8 +82,6 @@ build --@pico-sdk//bazel/config:PICO_STDIO_UART=True
 # ===========
 # Error output settings.
 common --verbose_failures
-# View failed test output
-test --test_output=errors
 
 # Platform configuration
 # ======================
@@ -158,4 +179,6 @@ build --output_groups=+mypy
 # note: this should be at the bottom of the file, so that user-specified
 # options override anything in this file
 # (https://bazel.build/run/bazelrc#imports)
+#
+# Note that ci configures this file to specify ci overrides, etc.
 try-import %workspace%/user.bazelrc
